src/test/ui/type/ascription/issue-54516.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: expected token: `,`
  --> $DIR/issue-54516.rs:4:58
   |
LL |     println!("{}", std::mem:size_of::<BTreeMap<u32, u32>>());
   |                            -                             ^ expected `,`
=======
error: expected one of `!`, `,`, or `::`, found `(`
  --> $DIR/issue-54516.rs:4:58
   |
LL |     println!("{}", std::mem:size_of::<BTreeMap<u32, u32>>());
   |                            -                             ^ expected one of `!`, `,`, or `::` here
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |                            |
   |                            help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to previous error

